# tacet

./: .devenv.flake.nix  .gitignore  AGENTS.md  BAYESIAN_CALIBRATION_BUG.md  CHANGELOG.md  CLAUDE.md  CORE_EXTRACTION_PLAN.md  Cargo.toml  FLAKY_TESTS.md  README.md  bench.just  benchmark_report.md  benchmark_results.csv  benchmark_summary.csv  bindings.just  build.just  calibrate.just  devenv.nix  devenv.yaml  doc.just  example.just  install.sh  justfile  profile.just  test.just
.cargo/: config.toml
.claude/: AGENTS.md  settings.json
.config/: nextest.toml
.devenv/: devenv.json  nix-eval-cache.db  nix-eval-cache.db-wal  profile
analysis/: silent_style_plots.py
benchmark-results-synthetic/: benchmark_report.md  benchmark_results.csv  benchmark_summary.csv
calibration_data/: bayesian_calibration_iteration_adjacent_network_0.0x.csv  bayesian_calibration_iteration_adjacent_network_1.0x.csv  bayesian_calibration_iteration_adjacent_network_2.0x.csv  bayesian_calibration_quick_adjacent_network_0.0x.csv  bayesian_calibration_quick_adjacent_network_1.0x.csv  bayesian_calibration_quick_adjacent_network_2.0x.csv  bayesian_calibration_validation_adjacent_network_0.0x.csv  bayesian_calibration_validation_adjacent_network_1.0x.csv  bayesian_calibration_validation_adjacent_network_2.0x.csv  bayesian_calibration_validation_pmu_2.0x.csv  estimation_accuracy_iteration_200ns.csv  estimation_accuracy_iteration_500ns.csv  estimation_accuracy_quick_adjacent_network_100ns.csv  estimation_accuracy_quick_adjacent_network_50ns.csv  fpr_quick_fixed_vs_fixed.csv  fpr_quick_random_vs_random.csv  power_quick_2x_theta_adjacent_network.csv  power_quick_2x_theta_research.csv  power_quick_5x_theta_adjacent_network.csv
calibration_data_remote/: autocorr_heatmap_adjacent_network.csv  autocorr_heatmap_fine_grid.csv
crates/tacet-napi/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
crates/tacet-napi/examples/: simple.ts
crates/tacet-napi/src/: lib.rs  oracle.rs  timer.rs  types.rs
crates/tacet-napi/test/: basic.test.ts  error-handling.test.ts  helpers.ts
crates/tacet-napi/ts/: collector.ts  index.ts  oracle.ts
crates/timing-oracle-bench/: Cargo.toml  README.md
crates/timing-oracle-bench/examples/: rtlf_crossval.rs  test_external_adapters.rs  test_native_adapters.rs
crates/timing-oracle-bench/src/: adapters.rs  checkpoint.rs  dudect_stats.rs  lib.rs  output.rs  realistic.rs  runner.rs  sweep.rs  synthetic.rs
crates/timing-oracle-bench/tests/: benchmark_fpr.rs  benchmark_power.rs
crates/timing-oracle-c/: Cargo.toml  README.md  build.rs
crates/timing-oracle-c/csrc/: to_measure.c  to_measure.h
crates/timing-oracle-c/examples/: Makefile  README.md  adaptive.c  attacker_models  attacker_models.c  common.h  compare  compare.c  crypto_hmac.c  custom_config  custom_config.c  no_std_embedded  no_std_embedded.c  result_handling  result_handling.c  simple  simple.c  simple_callback  simple_callback.c
crates/timing-oracle-c/include/: timing_oracle.h  timing_oracle.hpp
crates/timing-oracle-c/src/: lib.rs  types.rs
crates/timing-oracle-c/tests/: integration.rs  test_adaptive.c  test_config.c  test_error_handling.c  test_helpers.c  test_helpers.h  test_known_leaky.c  test_known_safe.c  test_main.c  test_memory_safety.c  test_one_shot.c
crates/timing-oracle-core/: Cargo.toml  README.md
crates/timing-oracle-core/proptest-regressions/statistics/: quantile.txt
crates/timing-oracle-core/src/: colors.rs  constants.rs  ffi_summary.rs  formatting.rs  lib.rs  math.rs  result.rs  types.rs
crates/timing-oracle-core/src/adaptive/: calibration.rs  drift.rs  kl_divergence.rs  mod.rs  posterior.rs  quality_gates.rs  state.rs  step.rs
crates/timing-oracle-core/src/analysis/: bayes.rs  effect.rs  gibbs.rs  mde.rs  mod.rs
crates/timing-oracle-core/src/orchestration/: mod.rs  pilot.rs
crates/timing-oracle-core/src/preflight/: autocorr.rs  generator.rs  mod.rs  resolution.rs  sanity.rs
crates/timing-oracle-core/src/statistics/: acquisition.rs  autocorrelation.rs  block_length.rs  bootstrap.rs  covariance.rs  detection.rs  mod.rs  online_stats.rs  quantile.rs
crates/timing-oracle-go/: Cargo.toml  README.md  config.go  example_test.go  go.mod  timing_oracle.go  timing_oracle_test.go
crates/timing-oracle-go/examples/simple/: main.go
crates/timing-oracle-go/include/: timing_oracle_go.h
crates/timing-oracle-go/internal/ffi/: ffi.go
crates/timing-oracle-go/scripts/: download-lib.sh
crates/timing-oracle-go/src/: lib.rs  types.rs
crates/timing-oracle-napi/: Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
crates/timing-oracle-napi/examples/: simple.ts
crates/timing-oracle-napi/src/: lib.rs  oracle.rs  types.rs
crates/timing-oracle-napi/test/: basic.test.ts  helpers.ts  integration.test.ts  outcomes.test.ts
crates/timing-oracle-napi/ts/: errors.ts  index.ts  oracle.ts  result.ts
crates/timing-oracle-uniffi/: Cargo.toml  build.rs
crates/timing-oracle-uniffi/src/: lib.rs
docs/: CALIBRATION_DEBUGGING_NOTES.md  DEFERRED.md  MBEDTLS_BLOCK_SIZE_ISSUE.md  MBEDTLS_FALSE_POSITIVE_REPORT.md  PLAN_RAW_SAMPLE_API.md  SILENT_REPLICATION.md  SILENT_VALIDATION.md  SPEC_MISALIGNMENTS.md  TEST_SUITE_AUDIT_REPORT.md  V5.1_IMPLEMENTATION_REPORT.md  V5.2_CORRELATION_ISSUE.md  VALIDATION.md  api-c.md  api-go.md  api-reference.md  api-rust.md  architecture.md  bayesian-layer.md  calibration-enhancement-plan.md  calibration-test-spec.md  ci-gate-bayesian-divergences.md  ci-gate-comparison.md  guide.md  implementation-guide.md  implementation_notes.md  investigation-rsa-timing-anomaly.md  measurement-result-api-proposal.md  perf-mmap-overflow-bug.md  spec.md  testing-patterns.md  troubleshooting.md  uniffi-proposal.md
examples/: README.md  aes.rs  baseline_test.rs  bench_correct_counts.rs  benchmark_baseline.rs  clamping_demo.rs  compare.rs  compare_mde_methods.rs  debug_bayes.rs  debug_pipeline.rs  profile.rs  profile_detailed.rs  profile_oracle.rs  simple.rs  test_exact_copy.rs  test_no_batch.rs  test_oracle_delay.rs  test_xor.rs
homebrew/: README.md
plots/: summary.txt
(+598 files in other folders)
