[workspace]
resolver = "2"
members = [
    "crates/timing-oracle",
    "crates/timing-oracle-core",
    "crates/timing-oracle-macros",
    "crates/timing-oracle-c",
    "crates/timing-oracle-go",
    "crates/timing-oracle-bench",
]
exclude = [
    "crates/timing-oracle/target/dudect-benchmarks",
]

# Shared settings for all workspace members
[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MPL-2.0"
repository = "https://github.com/agucova/timing-oracle"

[profile.release]
debug = true
