[package]
name = "timing-oracle-c"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C bindings for timing-oracle with support for C measurement loops"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
timing-oracle-core = { path = "../timing-oracle-core" }

[build-dependencies]
cbindgen = "0.29"
