[package]
name = "timing-oracle-core"
version = "0.1.5"
edition = "2021"
rust-version = "1.80"
license = "MPL-2.0"
readme = "README.md"
description = "Core statistical analysis for timing side-channel detection (no_std)"
keywords = ["security", "cryptography", "timing", "side-channel", "no_std"]
categories = ["cryptography", "no-std"]
repository = "https://github.com/agucova/timing-oracle"
documentation = "https://docs.rs/timing-oracle-core"

[lib]
name = "timing_oracle_core"

[dependencies]
# Linear algebra - supports no_std with libm
nalgebra = { version = "0.34", default-features = false, features = ["libm"] }

# Random number generation - supports no_std with alloc
rand = { version = "0.9", default-features = false, features = ["alloc"] }
rand_distr = { version = "0.5", default-features = false }
rand_xoshiro = { version = "0.7", default-features = false }

# Serialization - supports no_std with alloc
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# Math functions for no_std
libm = "0.2"

# Parallel bootstrap (optional, requires std)
rayon = { version = "1.11", optional = true }
hashbrown = "0.16.1"

[features]
default = ["std"]

# Enable std for convenience (fuller Display impls, etc.)
std = ["nalgebra/std", "rand/std", "serde/std"]

# Enable parallel bootstrap (requires std)
parallel = ["std", "dep:rayon"]
