[package]
name = "timing-oracle-go"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MPL-2.0"
description = "FFI bindings for Go to timing-oracle statistical analysis"
keywords = ["security", "cryptography", "timing", "side-channel", "ffi"]
categories = ["cryptography", "api-bindings"]
repository = "https://github.com/agucova/timing-oracle"

[lib]
name = "timing_oracle_go"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
timing-oracle-core = { path = "../timing-oracle-core", default-features = false, features = ["std", "parallel"] }
timing-oracle = { path = "../timing-oracle", default-features = false }
libc = { version = "0.2", default-features = false }

[features]
default = ["std"]
std = []

[dev-dependencies]
rand = "0.9"
