[package]
name = "timing-oracle-uniffi"
version = "0.1.0"
edition = "2021"
description = "UniFFI bindings for timing-oracle statistical analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/timing-oracle"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "timing_oracle_uniffi"

[dependencies]
timing-oracle-core = { path = "../timing-oracle-core", features = ["std"] }
timing-oracle = { path = "../timing-oracle" }
uniffi = { version = "0.28.3" }
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.28.3", features = ["bindgen-tests"] }
